--- a/.github/workflows/update_version.yml
+++ b/.github/workflows/update_version.yml
@@ -21,6 +21,8 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.BOT_GITHUB_PAT }}
 
       # Runs a single command using the runners shell
       - name: Install dependencies
