add more config options and update defaults

--- a/docker/alpine_openjdk8_from_beta/Dockerfile
+++ b/docker/alpine_openjdk8_from_beta/Dockerfile
@@ -7,7 +7,17 @@ ENV LANG=C.UTF-8 \
     XMAGE_DOCKER_SEONDARY_BIND_PORT="17179" \
     XMAGE_DOCKER_MAX_SECONDS_IDLE="600" \
     XMAGE_DOCKER_AUTHENTICATION_ACTIVATED="false" \
-    XMAGE_DOCKER_SERVER_NAME="mage-server"
+    XMAGE_DOCKER_SERVER_NAME="mage-server" \
+    XMAGE_DOCKER_MAILGUN_API_KEY="" \
+    XMAGE_DOCKER_MAILGUN_DOMAIN="" \
+    XMAGE_DOCKER_MAIL_SMTP_HOST="" \
+    XMAGE_DOCKER_MAIL_SMTP_PORT="" \
+    XMAGE_DOCKER_MAIL_USER="" \
+    XMAGE_DOCKER_MAIL_PASSWORD="" \
+    XMAGE_DOCKER_MAIL_FROM_ADDRESS="" \
+    XMAGE_DOCKER_MAX_GAME_THREADS="10" \
+    XMAGE_DOCKER_MAX_AI_OPPONENTS="15" \
+    XMAGE_DOCKER_JAVA_OPTS="-Xmx1024m -XX:MaxPermSize=384m -Dlog4j.configuration=file:./config/log4j.properties"
 
 # Install dependencies
 RUN set -ex && \
